fix: crap ton of changes and bug fixes
