# src/models/garden.go
@@ -11,13 +11,34 @@ type HypixelGardenResponse struct {
 }
 
 type Garden struct {
-	Level          Skill           `json:"level"`
-	Visitors       Visitors        `json:"visitors"`
-	CropMilestones []CropMilestone `json:"cropMilestones"`
-	CropUpgrades   []CropUpgrade   `json:"cropUpgrades"`
-	Composter      map[string]int  `json:"composter"`
-	Plot           PlotLayout      `json:"plot"`
-	GardenUpgrades map[string]int  `json:"gardenUpgrades"`
+	Level                Skill                `json:"level"`
+	Visitors             Visitors             `json:"visitors"`
+	CropMilestones       []CropMilestone      `json:"cropMilestones"`
+	CropUpgrades         []CropUpgrade        `json:"cropUpgrades"`
+	Composter            map[string]int       `json:"composter"`
+	Plot                 PlotLayout           `json:"plot"`
+	GardenUpgrades       []GardenUpgrade      `json:"gardenUpgrades"`
+	GardenChips          []GardenChip         `json:"gardenChips"`
+	DNAAnalysisMilestone DNAAnalysisMilestone `json:"dnaAnalysisMilestone"`
+}
+
+type DNAAnalysisMilestone struct {
+	Level    int `json:"level"`
+	MaxLevel int `json:"maxLevel"`
+}
+
+type GardenUpgrade struct {
+	Name     string `json:"name"`
+	Texture  string `json:"texture"`
+	Level    int    `json:"level"`
+	MaxLevel int    `json:"maxLevel"`
+}
+
+type GardenChip struct {
+	Name    string `json:"name"`
+	Texture string `json:"texture"`
+	Amount  int    `json:"amount"`
+	Max     int    `json:"max"`
 }
 
 type Visitors struct {
